// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar should render with 0% progress 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Calendar
    progress={0}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Path
          d="M37 37 L37 0 A37 37 0 0 1 37 0 Z"
          fill="rgba(255,255,255,1)"
        />,
        <Circle
          cx={37}
          cy={37}
          fill="rgba(255,255,255,0.2)"
          r={37}
        />,
        <Circle
          cx={37}
          cy={37}
          fill="#fff"
          r={34}
        />,
        <Path
          d="M49,22v-1.3c0-0.8-0.7-1.5-1.5-1.5S46,19.9,46,20.7V22H28v-1.3c0-0.8-0.7-1.5-1.5-1.5S25,19.9,25,20.7V22h-6.6 v30.8h37.4V22H49z M25,25v1.3c0,0.8,0.7,1.5,1.5,1.5s1.5-0.7,1.5-1.5V25H46v1.3c0,0.8,0.7,1.5,1.5,1.5s1.5-0.7,1.5-1.5V25h3.6v5 H21.3v-5H25z M21.3,49.8V33h31.4v16.8H21.3z"
          fill="white"
        />,
        <Polygon
          fill="white"
          points="35.8,42 32.3,38.5 30.2,40.6 35.8,46.2 43.8,38.3 41.6,36.2"
        />,
      ],
      "height": 74,
      "preserveAspectRatio": "xMidYMid meet",
      "style": undefined,
      "viewBox": "0 0 74 74",
      "width": 74,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M37 37 L37 0 A37 37 0 0 1 37 0 Z",
          "fill": "rgba(255,255,255,1)",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "cx": 37,
          "cy": 37,
          "fill": "rgba(255,255,255,0.2)",
          "r": 37,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "cx": 37,
          "cy": 37,
          "fill": "#fff",
          "r": 34,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M49,22v-1.3c0-0.8-0.7-1.5-1.5-1.5S46,19.9,46,20.7V22H28v-1.3c0-0.8-0.7-1.5-1.5-1.5S25,19.9,25,20.7V22h-6.6 v30.8h37.4V22H49z M25,25v1.3c0,0.8,0.7,1.5,1.5,1.5s1.5-0.7,1.5-1.5V25H46v1.3c0,0.8,0.7,1.5,1.5,1.5s1.5-0.7,1.5-1.5V25h3.6v5 H21.3v-5H25z M21.3,49.8V33h31.4v16.8H21.3z",
          "fill": "white",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "white",
          "points": "35.8,42 32.3,38.5 30.2,40.6 35.8,46.2 43.8,38.3 41.6,36.2",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Path
            d="M37 37 L37 0 A37 37 0 0 1 37 0 Z"
            fill="rgba(255,255,255,1)"
          />,
          <Circle
            cx={37}
            cy={37}
            fill="rgba(255,255,255,0.2)"
            r={37}
          />,
          <Circle
            cx={37}
            cy={37}
            fill="#fff"
            r={34}
          />,
          <Path
            d="M49,22v-1.3c0-0.8-0.7-1.5-1.5-1.5S46,19.9,46,20.7V22H28v-1.3c0-0.8-0.7-1.5-1.5-1.5S25,19.9,25,20.7V22h-6.6 v30.8h37.4V22H49z M25,25v1.3c0,0.8,0.7,1.5,1.5,1.5s1.5-0.7,1.5-1.5V25H46v1.3c0,0.8,0.7,1.5,1.5,1.5s1.5-0.7,1.5-1.5V25h3.6v5 H21.3v-5H25z M21.3,49.8V33h31.4v16.8H21.3z"
            fill="white"
          />,
          <Polygon
            fill="white"
            points="35.8,42 32.3,38.5 30.2,40.6 35.8,46.2 43.8,38.3 41.6,36.2"
          />,
        ],
        "height": 74,
        "preserveAspectRatio": "xMidYMid meet",
        "style": undefined,
        "viewBox": "0 0 74 74",
        "width": 74,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M37 37 L37 0 A37 37 0 0 1 37 0 Z",
            "fill": "rgba(255,255,255,1)",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "cx": 37,
            "cy": 37,
            "fill": "rgba(255,255,255,0.2)",
            "r": 37,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "cx": 37,
            "cy": 37,
            "fill": "#fff",
            "r": 34,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M49,22v-1.3c0-0.8-0.7-1.5-1.5-1.5S46,19.9,46,20.7V22H28v-1.3c0-0.8-0.7-1.5-1.5-1.5S25,19.9,25,20.7V22h-6.6 v30.8h37.4V22H49z M25,25v1.3c0,0.8,0.7,1.5,1.5,1.5s1.5-0.7,1.5-1.5V25H46v1.3c0,0.8,0.7,1.5,1.5,1.5s1.5-0.7,1.5-1.5V25h3.6v5 H21.3v-5H25z M21.3,49.8V33h31.4v16.8H21.3z",
            "fill": "white",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "white",
            "points": "35.8,42 32.3,38.5 30.2,40.6 35.8,46.2 43.8,38.3 41.6,36.2",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Calendar should render with 100% progress 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Calendar
    progress={100}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Path
          d="M37 37 L37 0 A37 37 0 1 1 36.99767522143787 7.303507487677052e-8 Z"
          fill="rgba(255,255,255,1)"
        />,
        <Circle
          cx={37}
          cy={37}
          fill="rgba(255,255,255,0.2)"
          r={37}
        />,
        <Circle
          cx={37}
          cy={37}
          fill="#fff"
          r={34}
        />,
        <Path
          d="M49,22v-1.3c0-0.8-0.7-1.5-1.5-1.5S46,19.9,46,20.7V22H28v-1.3c0-0.8-0.7-1.5-1.5-1.5S25,19.9,25,20.7V22h-6.6 v30.8h37.4V22H49z M25,25v1.3c0,0.8,0.7,1.5,1.5,1.5s1.5-0.7,1.5-1.5V25H46v1.3c0,0.8,0.7,1.5,1.5,1.5s1.5-0.7,1.5-1.5V25h3.6v5 H21.3v-5H25z M21.3,49.8V33h31.4v16.8H21.3z"
          fill="white"
        />,
        <Polygon
          fill="white"
          points="35.8,42 32.3,38.5 30.2,40.6 35.8,46.2 43.8,38.3 41.6,36.2"
        />,
      ],
      "height": 74,
      "preserveAspectRatio": "xMidYMid meet",
      "style": undefined,
      "viewBox": "0 0 74 74",
      "width": 74,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M37 37 L37 0 A37 37 0 1 1 36.99767522143787 7.303507487677052e-8 Z",
          "fill": "rgba(255,255,255,1)",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "cx": 37,
          "cy": 37,
          "fill": "rgba(255,255,255,0.2)",
          "r": 37,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "cx": 37,
          "cy": 37,
          "fill": "#fff",
          "r": 34,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M49,22v-1.3c0-0.8-0.7-1.5-1.5-1.5S46,19.9,46,20.7V22H28v-1.3c0-0.8-0.7-1.5-1.5-1.5S25,19.9,25,20.7V22h-6.6 v30.8h37.4V22H49z M25,25v1.3c0,0.8,0.7,1.5,1.5,1.5s1.5-0.7,1.5-1.5V25H46v1.3c0,0.8,0.7,1.5,1.5,1.5s1.5-0.7,1.5-1.5V25h3.6v5 H21.3v-5H25z M21.3,49.8V33h31.4v16.8H21.3z",
          "fill": "white",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "white",
          "points": "35.8,42 32.3,38.5 30.2,40.6 35.8,46.2 43.8,38.3 41.6,36.2",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Path
            d="M37 37 L37 0 A37 37 0 1 1 36.99767522143787 7.303507487677052e-8 Z"
            fill="rgba(255,255,255,1)"
          />,
          <Circle
            cx={37}
            cy={37}
            fill="rgba(255,255,255,0.2)"
            r={37}
          />,
          <Circle
            cx={37}
            cy={37}
            fill="#fff"
            r={34}
          />,
          <Path
            d="M49,22v-1.3c0-0.8-0.7-1.5-1.5-1.5S46,19.9,46,20.7V22H28v-1.3c0-0.8-0.7-1.5-1.5-1.5S25,19.9,25,20.7V22h-6.6 v30.8h37.4V22H49z M25,25v1.3c0,0.8,0.7,1.5,1.5,1.5s1.5-0.7,1.5-1.5V25H46v1.3c0,0.8,0.7,1.5,1.5,1.5s1.5-0.7,1.5-1.5V25h3.6v5 H21.3v-5H25z M21.3,49.8V33h31.4v16.8H21.3z"
            fill="white"
          />,
          <Polygon
            fill="white"
            points="35.8,42 32.3,38.5 30.2,40.6 35.8,46.2 43.8,38.3 41.6,36.2"
          />,
        ],
        "height": 74,
        "preserveAspectRatio": "xMidYMid meet",
        "style": undefined,
        "viewBox": "0 0 74 74",
        "width": 74,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M37 37 L37 0 A37 37 0 1 1 36.99767522143787 7.303507487677052e-8 Z",
            "fill": "rgba(255,255,255,1)",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "cx": 37,
            "cy": 37,
            "fill": "rgba(255,255,255,0.2)",
            "r": 37,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "cx": 37,
            "cy": 37,
            "fill": "#fff",
            "r": 34,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M49,22v-1.3c0-0.8-0.7-1.5-1.5-1.5S46,19.9,46,20.7V22H28v-1.3c0-0.8-0.7-1.5-1.5-1.5S25,19.9,25,20.7V22h-6.6 v30.8h37.4V22H49z M25,25v1.3c0,0.8,0.7,1.5,1.5,1.5s1.5-0.7,1.5-1.5V25H46v1.3c0,0.8,0.7,1.5,1.5,1.5s1.5-0.7,1.5-1.5V25h3.6v5 H21.3v-5H25z M21.3,49.8V33h31.4v16.8H21.3z",
            "fill": "white",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "white",
            "points": "35.8,42 32.3,38.5 30.2,40.6 35.8,46.2 43.8,38.3 41.6,36.2",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
